--- a/src/views/picker.html
+++ b/src/views/picker.html
@@ -10,7 +10,7 @@
   <body>
     <section id="border">
       <section id="picker">
-        <table></table>
+        <div id="grid"></div>
       </section>
     </section>
   </body>
