--- a/src/views/picker.html
+++ b/src/views/picker.html
@@ -4,14 +4,9 @@
     <meta charset="utf-8">
     <title>Picker</title>
     <link rel="stylesheet" href="./css/picker.css" />
-    <script defer src="js/color.class.js"></script>
     <script defer src="js/picker.js"></script>
   </head>
   <body>
-    <section id="border">
-      <section id="picker">
-        <div id="grid"></div>
-      </section>
-    </section>
+    <section id="picker"></section>
   </body>
 </html>
