--- a/src/views/settings.html
+++ b/src/views/settings.html
@@ -32,7 +32,7 @@
     </header>
     <section class="panel active" id="general-tab">
       <h2>Application</h2>
-      <p class="toggle"><i class="fa fa-toggle-off"></i> Show Tray icon</p>
+      <p class="toggle" id="tray-icon"><i class="fa fa-toggle-off"></i> Show Tray icon</p>
       <h2>Colorpicker Tools</h2>
       <p>Change your toolset <span>(hover icon for description)</span></p>
       <section id="toolset">
@@ -43,6 +43,7 @@
     </section>
     <section class="panel" id="colorpicker-tab">
       <h2>Appearance</h2>
+      <p class="toggle" id="colorfull-app"><i class="fa fa-toggle-off"></i> Show complementary colors in OSX Icons</p>
       <p>Change the position of app's icons</p>
       <section id="position">
         <li data-position="left">
