--- a/src/views/settings.html
+++ b/src/views/settings.html
@@ -40,6 +40,8 @@
         <i class="arrow fa fa-exchange"></i>
         <div id="selectedTools"></div>
       </section>
+      <h2>Preferences</h2>
+      <p id="reset">Reset Colorpicker</p>
     </section>
     <section class="panel" id="colorpicker-tab">
       <h2>Appearance</h2>
