feat(settings): add tooltip

--- a/src/views/settings.html
+++ b/src/views/settings.html
@@ -5,6 +5,7 @@
     <title>Settings Colorpicker</title>
     <link rel="stylesheet" href="./css/settings.css" />
     <link rel="stylesheet" href="./css/font-awesome.min.css" />
+    <link rel="stylesheet" href="./css/tippy.css" />
     <script defer src="./js/settings.js"></script>
   </head>
   <body>
@@ -34,7 +35,7 @@
       <h2>Application</h2>
       <p class="toggle" id="tray-icon"><i class="fa fa-toggle-off"></i> Show Tray icon</p>
       <h2>Colorpicker Tools</h2>
-      <p>Change your toolset <span>(hover icon for description)</span></p>
+      <p>Change your toolset</p>
       <section id="toolset">
         <div id="allTools"></div>
         <i class="arrow fa fa-exchange"></i>
