feat(FA): update fontawesome to v5

--- a/src/views/colorpicker.html
+++ b/src/views/colorpicker.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="css/app-buttons.css" />
 		<link rel="stylesheet" href="css/colorpicker.css" />
-		<link rel="stylesheet" href="css/font-awesome.min.css" />
+		<link rel="stylesheet" href="css/fontawesome-all.min.css" />
 		<script defer src="js/color.class.js"></script>
 		<script defer src="js/colorpicker.class.js"></script>
 		<script defer src="js/colorpicker.events.js"></script>
