--- a/src/views/settings.html
+++ b/src/views/settings.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Settings Colorpicker</title>
     <link rel="stylesheet" href="./css/settings.css" />
-    <link rel="stylesheet" href="./css/font-awesome.min.css" />
+    <link rel="stylesheet" href="./css/fontawesome-all.min.css" />
     <link rel="stylesheet" href="./css/tippy.css" />
     <script defer src="./js/settings.js"></script>
   </head>
