--- a/src/views/css/app-buttons.css
+++ b/src/views/css/app-buttons.css
@@ -41,7 +41,7 @@ a{
 }
   .toolbar ul{
     margin: 0; padding: 0;
-    margin-right: 20px;
+    margin-right: 15px;
     display: flex;
   }
 
@@ -61,6 +61,9 @@ a{
       transition: color 0.2s;
       list-style: none;
       margin: 0 5px 0 5px;
+      font-size: 0.9em;
+      position: relative;
+      top: 3px;
     }
     .toolbar #app_buttons.darwin li{
       margin: 0 4px 0 4px;
