feat(colorsbook): can add category

--- a/src/views/colorsbook.html
+++ b/src/views/colorsbook.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="css/app-buttons.css" />
     <link rel="stylesheet" href="css/colorsbook.css" />
-    <link rel="stylesheet" href="css/font-awesome.min.css" />
+    <link rel="stylesheet" href="css/fontawesome-all.min.css" />
     <script defer src="js/colorsbook.js"></script>
     <script defer src="js/util.class.js"></script>
   </head>
@@ -21,6 +21,12 @@
     <section id="main">
       <section id="categories"></section>
       <section id="colors"></section>
+      <aside id="popup_category">
+        <input type="text" placeholder="name" maxlength="12">
+      </aside>
+      <aside id="popup_color">
+        <input type="text" placeholder="#FFFFFF" maxlength="7">
+      </aside>
     </section>
   </body>
 </html>
