feat(colorsbook): can save color now

--- a/src/views/colorsbook.html
+++ b/src/views/colorsbook.html
@@ -19,7 +19,9 @@
       <ul id="tools"></ul>
     </div>
     <section id="main">
-      <section id="categories"></section>
+      <section id="categories-wrapper">
+        <section id="categories"></section>
+      </section>
       <section id="colors"></section>
       <aside id="popup_category">
         <input type="text" placeholder="name" maxlength="12">
