feat(settings): prepare import/export

--- a/src/views/settings.html
+++ b/src/views/settings.html
@@ -32,8 +32,8 @@
       </li>
     </header>
     <section class="panel active" id="general-tab">
-      <h2>Application</h2>
-      <p class="toggle" id="tray-icon"><i class="fa fa-toggle-off"></i> Show Tray icon</p>
+      <!-- <h2>Application</h2> -->
+      <!-- <p class="toggle" id="tray-icon"><i class="fa fa-toggle-off"></i> Show Tray icon</p> -->
       <h2>Colorpicker Tools</h2>
       <p>Change your toolset</p>
       <section id="toolset">
@@ -80,7 +80,9 @@
     </section>
     <section class="panel" id="colorsbook-tab">
       <h2>Colorsbook</h2>
-      <p>No settings for the moment.</p>
+      <!-- <p>Export/Import your colors</p>
+      <button type="button" id="import">Import</button>
+      <a id="export" href="data:' + '" download="colorsbook.json">Export</a> -->
     </section>
     <section class="panel" id="about-tab">
       <h2>About</h2>
