--- a/src/renderer/colorpicker/colorpicker.css
+++ b/src/renderer/colorpicker/colorpicker.css
@@ -1,34 +1,33 @@
-@font-face{
+:root {
+  --red: 0;
+  --green: 0;
+  --blue: 0;
+  --hue: 0;
+  --saturation: 100%;
+  --lightness: 50%;
+  --alpha: 1;
+}
+
+@font-face {
   font-family: 'Lato';
   src: url('Lato-Regular.ttf');
 }
 
-html, body{
+html, body {
   height: 100%;
 }
 
-body, p, h1, h2, input{
+body, p, h1, h2, input {
   margin: 0;
   font-family: 'Lato', sans-serif;
 }
-body{
+body {
+  background: rgba(var(--red), var(--green), var(--blue), var(--alpha));
   overflow: hidden;
 }
-a{
+a {
   color: inherit;
   text-decoration: none;
-}
-
-/* CLEAN OPTION */
-.clean .toolbar, .clean.darkMode .toolbar{
-  border-bottom: 1px solid rgba(0, 0, 0, 0);
-}
-.clean .toolbar p:not(#clean_button), .clean #app_buttons{
-  opacity: 0.1;
-}
-
-.clean #inputs, .clean .value, .clean .sliders{
-  opacity: 0;
 }
 
 #tools {
@@ -36,7 +35,7 @@ a{
   margin-top: 1px;
   margin-bottom: 1px;
 }
-  #tools p{
+  #tools p {
     color: rgba(0, 0, 0, 0.30);
     font-weight: bold;
     padding: 0 6px 0 5px;
@@ -46,24 +45,18 @@ a{
     cursor: pointer;
     transition: 0.3s;
   }
-  .darkMode #tools p{
-    color: rgba(255, 255, 255, 0.50);
-  }
-  #tools p:hover{ color: rgba(0, 0, 0, 0.45); }
-  .darkMode #tools p:hover{ color: rgba(255, 255, 255, 0.60); }
+  
+  #tools p:hover { color: rgba(0, 0, 0, 0.45); }
+  #tools p.active { color: rgba(0, 0, 0, 0.60); }
 
-  #tools p.active{ color: rgba(0, 0, 0, 0.60); }
-  .darkMode #tools p.active{ color: rgba(255, 255, 255, 0.85); }
-
-  #tools::selection, #tools p::selection, #tools li::selection, #tools div::selection{
+  #tools::selection, #tools p::selection, #tools li::selection, #tools div::selection {
     background: rgba(0, 0, 0, 0);
   }
-
 
 /**
  * HEADER CSS
  */
-header{
+#shading {
   position: absolute;
   z-index: 100;
   width: 100%;
@@ -72,26 +65,24 @@ header{
   opacity: 0;
   transition: 0.6s;
 }
-header.shading{
+#shading.shading {
   visibility: visible;
   opacity: 1;
   top: 34px;
 }
-header .shades, header .tints, header .naturals{
+#shading .shades, #shading .tints, #shading .naturals {
   display: flex;
 }
-header .shades aside, header .tints aside, header .naturals aside{
+#shading .shades aside, #shading .tints aside, #shading .naturals aside {
   flex: 1 100%;
   height: 10vmin;
   cursor: pointer;
 }
 
-
-
 /**
  * MAIN COLORPICKER CSS
  */
-.main{
+#main {
   position: absolute;
   bottom: 0; left: 0;
   padding-top: 15px;
@@ -105,118 +96,162 @@ header .shades aside, header .tints aside, header .naturals aside{
   box-sizing: border-box;
 }
 
+
+/**
+ * SLIDERS & INPUTS CSS
+ */
+
 #slidersBox {
   display: flex;
 }
 
-#sliders, #inputs{
-  position: relative;
-  transition: 0.5s;
+  #sliders,
+  #inputs {
+    position: relative;
+  }
+
+  #sliders {
+    margin-top: 3px;
+  }
+
+    #sliders div {
+      position: relative;
+      width: 220px;
+      height: 21px;
+      padding: 2px;
+      margin-bottom: 8px;
+    }
+
+/* SLIDERS STYLE */
+
+    #sliders input[type=range] {
+      -webkit-appearance: none;
+      outline: none;
+      background: none;
+      width: inherit;
+      box-sizing: border-box;
+    }
+
+    #sliders input[type=range]::-webkit-slider-thumb {
+      position: relative;
+      z-index: 100; bottom: 3px;
+      -webkit-appearance: none;
+      height: 22px; width: 22px;
+      border-radius: 50%;
+      background: #FCFCFC;
+      border-bottom: 2px solid #F3F3F3;
+      cursor: pointer;
+    }
+
+    #sliders progress {
+      -webkit-appearance: none;
+      appearance: none;
+    }
+
+    #sliders progress[value]::-webkit-progress-bar {
+      position: absolute;
+      width: 95%;
+      top: 5px; left: 5px;
+      background-color: rgba(0, 0, 0, 0.2);
+      border-radius: 6px;
+      height: 10px;
+      transition: background 0.3s;
+    }
+
+    #sliders progress[value]::-webkit-progress-value {
+      background: none;
+      border-radius: 6px;
+      height: 10px;
+      min-width: 18px;
+    }
+
+/* SPECIFICS COLORS */
+
+    #redSlider progress[value]::-webkit-progress-value {
+      background: rgb(255, 87, 57);
+    }
+
+    #greenSlider progress[value]::-webkit-progress-value {
+      background: rgb(105, 195, 59);
+    }
+    
+    #blueSlider progress[value]::-webkit-progress-value {
+      background: rgb(65, 165, 225);
+    }
+    
+    #alphaSlider progress[value]::-webkit-progress-value {
+      background: rgba(0, 0, 0, 0.5);
+    }
+
+    #hueSlider progress[value]::-webkit-progress-bar {
+      background: -webkit-linear-gradient(left, hsla(0, var(--saturation), var(--lightness), 1),hsla(10, var(--saturation), var(--lightness), 1),hsla(20, var(--saturation), var(--lightness), 1),hsla(30, var(--saturation), var(--lightness), 1),hsla(40, var(--saturation), var(--lightness), 1),hsla(50, var(--saturation), var(--lightness), 1),hsla(60, var(--saturation), var(--lightness), 1),hsla(70, var(--saturation), var(--lightness), 1),hsla(80, var(--saturation), var(--lightness), 1),hsla(90, var(--saturation), var(--lightness), 1),hsla(100, var(--saturation), var(--lightness), 1),hsla(110, var(--saturation), var(--lightness), 1),hsla(120, var(--saturation), var(--lightness), 1),hsla(130, var(--saturation), var(--lightness), 1),hsla(140, var(--saturation), var(--lightness), 1),hsla(150, var(--saturation), var(--lightness), 1),hsla(160, var(--saturation), var(--lightness), 1),hsla(170, var(--saturation), var(--lightness), 1),hsla(180, var(--saturation), var(--lightness), 1),hsla(190, var(--saturation), var(--lightness), 1),hsla(200, var(--saturation), var(--lightness), 1),hsla(210, var(--saturation), var(--lightness), 1),hsla(220, var(--saturation), var(--lightness), 1),hsla(230, var(--saturation), var(--lightness), 1),hsla(240, var(--saturation), var(--lightness), 1),hsla(250, var(--saturation), var(--lightness), 1),hsla(260, var(--saturation), var(--lightness), 1),hsla(270, var(--saturation), var(--lightness), 1),hsla(280, var(--saturation), var(--lightness), 1),hsla(290, var(--saturation), var(--lightness), 1),hsla(300, var(--saturation), var(--lightness), 1),hsla(310, var(--saturation), var(--lightness), 1),hsla(320, var(--saturation), var(--lightness), 1),hsla(330, var(--saturation), var(--lightness), 1),hsla(340, var(--saturation), var(--lightness), 1),hsla(350, var(--saturation), var(--lightness), 1),hsla(360, var(--saturation), var(--lightness), 1));
+    }
+
+    #saturationSlider progress[value]::-webkit-progress-bar {
+      background: -webkit-linear-gradient(left, hsla(var(--hue), 0%, var(--lightness), 1),hsla(var(--hue), 20%, var(--lightness), 1),hsla(var(--hue), 40%, var(--lightness), 1),hsla(var(--hue), 60%, var(--lightness), 1),hsla(var(--hue), 80%, var(--lightness), 1),hsla(var(--hue), 100%, var(--lightness), 1));
+    }
+
+    #lightnessSlider progress[value]::-webkit-progress-bar {
+      background: -webkit-linear-gradient(left, hsla(var(--hue), var(--saturation), 0%, 1),hsla(var(--hue), var(--saturation), 20%, 1),hsla(var(--hue), var(--saturation), 40%, 1),hsla(var(--hue), var(--saturation), 60%, 1),hsla(var(--hue), var(--saturation), 80%, 1),hsla(var(--hue), var(--saturation), 100%, 1));
+    }
+
+/* INPUTS STYLE */
+
+    #inputs input {
+      display: block;
+      margin-bottom: 8px;
+      margin-left: 10px;
+    }
+
+    #inputs input[type=number]::-webkit-inner-spin-button,
+    #inputs input[type=number]::-webkit-outer-spin-button {
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      margin: 0;
+    }
+
+    #inputs input[type="number"],
+    input[type="text"] {
+      width: 40px;
+      text-align: center;
+      background: rgba(0, 0, 0, 0.1);
+      color: rgba(0, 0, 0, 0.6);
+      border: none;
+      padding: 2px;
+      font-size: 1.05em;
+      font-weight: bold;
+      outline: none;
+      transition: background 0.3s, color 0.3s;
+    }
+
+#hexBox {
+  margin-bottom: 9px;
+  margin-left: 10px;
+  transition: opacity 0.4s;
 }
 
-.alpha_bar, #alpha_value{
+  #hexBox input {
+    display: block;
+    width: 105px;
+  }
+
+#alphaBox {
+  display: none;
+}
+
+/* .alpha_bar, #alpha_value{
   position: relative;
   transition: 0.5s;
   bottom: -10px;
 }
 .opacity #sliders, .opacity .alpha_bar, .opacity #inputs, .opacity #alpha_value{
   bottom: 0.5px;
-}
+} */
 
-#redSlider, #greenSlider, #blueSlider, #alphaSlider{
-  position: relative;
-  width: 220px;
-  height: 20px;
-  padding: 6px 0;
-}
-
-#alphaBox {
-  display: none;
-}
-
-/* STYLING SLIDER */
-input[type=range]{
-  margin: 0;
-  padding: 3px 0;
-  -webkit-appearance: none;
-  outline: none;
-  background: none;
-  width: 100%;
-  box-sizing: border-box;
-}
-input[type=range]::-webkit-slider-thumb {
-  position: relative;
-  z-index: 100; bottom: 10px;
-  -webkit-appearance: none;
-  height: 22px; width: 22px;
-  border-radius: 50%;
-  background: #FFFFFF;
-  border-bottom: 2px solid #F3F3F3;
-  cursor: pointer;
-}
-
-progress[value]::-webkit-progress-bar {
-  position: absolute;
-  width: 99%;
-  top: 5px; left: 1px;
-  background-color: rgba(255, 255, 255, 0.9);
-  border-radius: 6px;
-  height: 10px;
-}
-progress[value]::-webkit-progress-value {
-  border-radius: 6px;
-  height: 10px;
-}
-#redSlider progress[value]::-webkit-progress-value { background: rgb(255, 87, 57); }
-#greenSlider progress[value]::-webkit-progress-value { background: rgb(105, 195, 59); }
-#blueSlider progress[value]::-webkit-progress-value { background: rgb(65, 165, 225); }
-#alphaSlider progress[value]::-webkit-progress-value { background: rgba(0, 0, 0, 0.5); }
-progress{
-  -webkit-appearance: none;
-  appearance: none;
-}
-
-/* INPUTS STYLE */
-  #inputs input{
-    display: block;
-    margin-bottom: 8px;
-    margin-left: 10px;
-  }
-
-  #inputs input[type=number]::-webkit-inner-spin-button,
-  #inputs input[type=number]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    margin: 0;
-  }
-
-  #inputs input[type="number"], input[type="text"]{
-    width: 40px;
-    text-align: center;
-    background: rgba(0, 0, 0, 0.08);
-    color: rgba(0, 0, 0, 0.5);
-    border: none;
-    padding: 2px;
-    font-size: 1.05em;
-    font-weight: bold;
-    outline: none;
-    transition: 0.3s;
-  }
-  .darkMode #inputs input[type="number"], .darkMode input[type="text"], .darkMode .value p{
-    background: rgba(255, 255, 255, 0.08);
-    color: rgba(255, 255, 255, 0.8);
-  }
-
-  .value{
-    margin-bottom: 9px;
-    margin-left: 10px;
-    transition: opacity 0.4s;
-  }
-  .value input{
-    display: block;
-    width: 105px;
-  }
+/**
+ * CONTEXT MENU CSS
+ */
 
 #contextMenu{
   display: none;
@@ -226,9 +261,7 @@ progress{
   padding: 10px;
   background: rgba(0, 0, 0, 0.4);
 }
-.darkMode #contextMenu{
-  background: rgba(255, 255, 255, 0.4);
-}
+
   #contextMenu li{
     list-style: none;
     padding: 3px 2px;
