--- a/src/renderer/colorpicker/darkmode.css
+++ b/src/renderer/colorpicker/darkmode.css
@@ -14,7 +14,7 @@
   color: rgba(255, 255, 255, 0.85);
 }
 
-.dark progress[value]::-webkit-progress-bar {
+.dark #sliders progress[value]::-webkit-progress-bar {
   background-color: rgba(255, 255, 255, 0.7);
 }
 
