Commented on some css files

--- a/src/views/css/colorpicker.css
+++ b/src/views/css/colorpicker.css
@@ -1,3 +1,5 @@
+/*this css file contains attributes of font, placement or positioning, boarder, opacity, and margin*/
+
 @font-face{
   font-family: 'Lato';
   src: url('fonts/Lato-Regular.ttf');
