--- a/src/views/css/colorsbook.css
+++ b/src/views/css/colorsbook.css
@@ -1,3 +1,6 @@
+/* 
+This css file is focused on font, colour, alignment, flex and categories
+*/
 @font-face{
   font-family: 'Lato';
   src: url('fonts/Lato-Regular.ttf');
