feat: add app menu

--- a/src/components/sliders/slider/style.module.css
+++ b/src/components/sliders/slider/style.module.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   height: 24px;
-  width: 50%;
+  width: 100%;
 }
 
 .input {
@@ -36,8 +36,14 @@
 }
 
 .progress::-webkit-progress-bar {
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(230, 230, 230, 0.9);
   border-radius: 100px;
+}
+
+@media (prefers-color-scheme: dark) {
+  .progress::-webkit-progress-bar {
+    background-color: rgba(0, 0, 0, 0.3);
+  }
 }
 
 .progress::-webkit-progress-value {
