--- a/src/components/colorBackground/style.module.css
+++ b/src/components/colorBackground/style.module.css
@@ -1,7 +1,12 @@
 .colorBackground {
-  /* position: absolute; */
   width: 100%;
   height: 40vh;
-  /* height: calc(100vh - 34px); */
   background: var(--colopicker-main-color);
+}
+
+@media screen and (max-height: 245px) {
+  .colorBackground {
+    position: absolute;
+    height: calc(100vh - 34px);
+  }
 }
