--- a/src/components/sliders/RGBSlider/style.module.css
+++ b/src/components/sliders/RGBSlider/style.module.css
@@ -1,8 +1,18 @@
-.section {
-  width: 60%;
+.RGBSlider {
+  width: 70%;
   margin: 15px;
 }
 
-.section section {
-  margin-top: 5px;
+.slider {
+  display: flex;
+  margin: 6px 0;
+  gap: 15px;
+}
+
+@media screen and (max-height: 245px) {
+  .RGBSlider {
+    position: absolute;
+    bottom: -7px;
+    left: 0;
+  }
 }
